amelioration carousel partenaire economique, ajout carousel sur page who's who

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -271,6 +271,12 @@ a{
     }
 }
 
+.carousel-inner {
+    img {
+        height: 25vh;
+    }
+}
+
 .grade_paysage{
     @media screen and (max-width: 768px){
         display: none;
