--- a/templates/collects/whos_who.html.twig
+++ b/templates/collects/whos_who.html.twig
@@ -30,7 +30,7 @@
 
         <h1 class="title-page"><span>Nos Partenaires</span></h1>
     <section>
-
+        {{ include('infos/carousselPartenaires.html.twig') }}
     </section>
 
     <h1 class="title-page"><span>Nos Collecteurs experts</span></h1>
