--- a/templates/collects/whos_who.html.twig
+++ b/templates/collects/whos_who.html.twig
@@ -11,18 +11,20 @@
 <main class="home">
 
     <h1 class="title-page"><span>Who's who</span></h1>
+
     <section>
-    <div class="d-flex flex-wrap justify-content-between mb-5 mt-5">
-        <div class="giver ">
+
+    <div class="row mb-5 mt-5 text-center">
+        <div class="giver text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
            <img class="img-top" src="{{ asset('images/GiverAv.png') }}" alt="Givers_front">
         </div>
-        <div class="collecteurs">
+        <div class="collecteurs text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
             <img class="img-top" src="{{ asset('images/CollecteursAv.png') }}" alt="Collecteurs">
         </div>
-          <div class="partenaire">
+          <div class="partenaire text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
                 <img class="img-top" src="{{ asset('images/PartenaireAv.png') }}" alt="Partenaires">
           </div>
-        <div class="biper">
+        <div class="biper text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
             <img class="img-top" src="{{ asset('images/BiperAv.png') }}" alt="Bipers">
         </div>
     </div>
