--- a/templates/home/siteDeRenovation.html.twig
+++ b/templates/home/siteDeRenovation.html.twig
@@ -9,13 +9,13 @@
     </h1>
     <section>
         <div class="row">
-            <div class="col-12 mt-lg-5 col-sm-7 col-md-7 mt-1 ">
-                <p class="reno font-weight-bold ml-2 mt-5 mt-md-1 mt-lg-5 text-justify mb-5">
+            <div class="col-12 col-sm-12 col-md-7">
+                <p class="reno font-weight-bold text-justify m-4">
                     Enviro Services France est notre partenaire pour le test et la rénovation des téléphones. Experts en téléphone mobile, Enviro permet de vérifier l’état cosmétique des téléphones collectés et de s’occuper de l’ensemble des rénovations à réaliser sur un téléphone pour le remettre à neuf et pouvoir lui offrir une seconde vie sur le marché local grâce à notre projet et nos réseaux de distribution. Enviro Services France s’occupe également, avant toute manipulation du téléphone collecté : de supprimer l’ensemble des données présentes sur le téléphone.
                 </p>
             </div>
-            <div class="col-12 col-sm-5 mt-md-4 col-md-5 mt-5 text-center ">
-                <img class="w-75 h-75 mt-3" src="{{ asset('images/banctests.jpg') }}" alt="banctest">
+            <div class="col-12 col-sm-12 col-md-5 mt-md-5 mt-lg-5 mt-xl-4 text-center">
+                <img class="w-75 h-75 text-center" src="{{ asset('images/banctests.jpg') }}" alt="banctest">
             </div>
         </div>
     </section>
@@ -24,16 +24,17 @@
         <span>Notre Site de recyclage</span>
     </h1>
     <section>
-        <div class="d-flex flex-row ">
-            <div class="col-7 mt-5">
-                <p class="reno mt-md-2 mt-lg-5 font-weight-bold  text-justify">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-7 mt-md-2 mt-lg-4 mt-xl-5">
+                <p class="reno font-weight-bold text-justify m-4">
                     BipBip s’engage à recycler l’ensemble des téléphones collectés non rénovables. BipBip procède au traitement des déchets avec un partenaire régional de traitement des déchets d’équipements électriques et électroniques (DEEE).
                 </p>
-                <a href="{{ path('add_message') }}"><button class="primary-button">Je suis une entreprise de traitement des DEEE</button></a>
             </div>
-            <div class="tenor-gif-embed col-5 mt-5" data-postid="5355393" data-share-method="host" data-width="100%" data-aspect-ratio="1.0"><a href="https://tenor.com/view/recycle-recycling-gif-5355393">Recycle GIF</a> from <a href="https://tenor.com/search/sign-gifs">Sign GIFs</a></div>
-            <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+            <div class="col-12 col-sm-12 col-md-5 mt-md-3 mt-lg-3 mt-xl-3 text-center">
+                <div class="tenor-gif-embed " data-postid="5355393" data-share-method="host" data-width="100%" data-aspect-ratio="1.0"><a href="https://tenor.com/view/recycle-recycling-gif-5355393">Recycle GIF</a> from <a href="https://tenor.com/search/sign-gifs">Sign GIFs</a></div>
+                <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             </div>
+        </div>
     </section>
 
 
