--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,9 +29,9 @@
 
         <div class="row pl-3 pr-3 pt-3 header justify-content-sm-between mx-auto align-items-center">
             <div class="d-sm-block col-7 p-3 text-center">
-                <h1 class="text-info font-weight-bold"><span class="font-weight-bold">BipBip</span> RACHÈTE TON TÉL ET EN FAIT</h1>
-                <h2 class="">LE 1er MOBILE RECYCLÉ ET CONNECTÉ</h2>
-                <H2 class="text-success font-weight-bold">AUX BONS PLANS DE TA RÉGION</H2>
+                <h1 class="header-content text-info font-weight-bold"><span class="font-weight-bold">BipBip</span> RACHÈTE TON TÉL ET EN FAIT</h1>
+                <h2 class="header-content ">LE 1er MOBILE RECYCLÉ ET CONNECTÉ</h2>
+                <H2 class="header-content text-success font-weight-bold">AUX BONS PLANS DE TA RÉGION</H2>
             </div>
             <div class="col-5 col-md-3 p-3">
                 <img src="{{ asset('images/photo-home.png') }}" alt="BipBip rachète ton tél" class="silouette img-fluid">
