--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -87,7 +87,7 @@
                         <h5 class="text-center col-6 mx-auto font-weight-bold">
                             Tu souhaites proposer un nouveau site de collecte. Clique là !<br>
                         </h5>
-                        <a href="{{ path('add_message') }}" class="secondary-button">Propose un lieu<br>ou une date ici !</a>
+                        <a href="{{ path('asso') }}" class="secondary-button">Propose un lieu<br>ou une date ici !</a>
 
                         {% include('home/include_galerie.html.twig') %}
 
