--- a/templates/collects/whos_who.html.twig
+++ b/templates/collects/whos_who.html.twig
@@ -13,31 +13,31 @@
     <h1 class="title-page"><span>Who's who</span></h1>
 
     <section>
-
-    <div class="row mb-5 mt-5 text-center">
-        <div class="giver text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
-           <img class="img-top" src="{{ asset('images/GiverAv.png') }}" alt="Givers_front">
+        <div class="d-flex flex-wrap justify-content-around mb-5 mt-5">
+              <div class="giver mb-5 ">
+                  <a href="{{ path("vends") }}" target="_blank" title="vends"><img class="img-top" src="{{ asset('images/GiverAv.png') }}" alt="Givers_front"></a>
+              </div>
+              <div class="collecteur mb-5">
+                  <a href="{{ path("asso") }}" target="_blank" title="bipers"><img class="img-top" src="{{ asset('images/CollecteursAv.png') }}" alt="Collecteurs"></a>
+              </div>
+              <div class="partenaire mb-5">
+                  <a href="{{ plaquette }}" target="_blank" title="plaquette"><img class="img-top" src="{{ asset('images/PartenaireAv.png') }}" alt="Partenaires"></a>
+              </div>
+              <div class="biper mb-5">
+                  <a href="{{ path("boutique") }}" target="_blank" title="boutique"><img class="img-top" src="{{ asset('images/BiperAv.png') }}" alt="Bipers"></a>
+              </div>
         </div>
-        <div class="collecteurs text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
-            <img class="img-top" src="{{ asset('images/CollecteursAv.png') }}" alt="Collecteurs">
-        </div>
-          <div class="partenaire text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
-                <img class="img-top" src="{{ asset('images/PartenaireAv.png') }}" alt="Partenaires">
-          </div>
-        <div class="biper text-center col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3 mb-5">
-            <img class="img-top" src="{{ asset('images/BiperAv.png') }}" alt="Bipers">
-        </div>
-    </div>
-    </section>
 
-        <h1 class="title-page"><span>Nos Partenaires</span></h1>
-    <section>
+</section>
 
-    </section>
+    <h1 class="title-page"><span>Nos Partenaires</span></h1>
+<section>
 
-    <h1 class="title-page"><span>Nos Collecteurs experts</span></h1>
-    <section>
-        {% include('home/include_galerie.html.twig') %}
-    </section>
+</section>
+
+<h1 class="title-page"><span>Nos Collecteurs experts</span></h1>
+<section>
+    {% include('home/include_galerie.html.twig') %}
+</section>
 </main>
 {% endblock %}
