--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -163,8 +163,8 @@
                     <h2 class="secondary-round-title">Découvre le processus de recyclage en BD</h2>
                 </div>
 
-                <div class="col-12">
-                     <img src="" alt="bd">
+                <div class="col-12 text-center">
+                     <img src="{{ asset('images/BD-barree.jpg') }}" alt="bd">
                 </div>
             </div>
         </section>
