--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -47,7 +47,7 @@
 
         <div class="row justify-content-center m-4">
             <p>BipBip est la solution innovante et environnementale pour la région... on te fait un dessin ?</p>
-            <img class="img-fluid w-75 mt-3" src="{{ asset('images/schema-solution.png') }}" alt="solution">
+            <img class="img-fluid w-75 mt-3" src="{{ asset('images/BD-barree.jpg') }}" alt="solution">
         </div>
 
         <div class="row m-2">
