ajout cachet entreprise pour signature bon de cession

--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -171,11 +171,11 @@
     <table style="height:160px;">
         <tr>
             <td style="width:50%; border:2px solid black; text-align:center;">
-
+                <img src="/uploads/signatures/ImageCachetEnviroServicesFrance.png" alt="BipBip Mobile">
             </td>
             <td style="width:50%; border:2px solid black;">
                 {% if app.user.roles == "ROLE_ADMIN" or app.user.roles == "ROLE_COLLECTOR" %}
-                <img width="200px; margin-top:30px;" src="uploads/signatures/user{{ estimation.user.id }}.png" alt="BipBip Mobile">
+                <img width="200px; margin-top:30px;" src="/uploads/signatures/user{{ estimation.user.id }}.png" alt="BipBip Mobile">
                 {% endif %}
             </td>
         </tr>
