--- a/templates/user/envoi_chronopost.html.twig
+++ b/templates/user/envoi_chronopost.html.twig
@@ -9,10 +9,9 @@
             </div>
             <div class="col-10">
                 <h5 class="text-danger text-center">
-                    Lors de ton envoie, nous avons besoin d'avoir la photocopie
-                    recto verso de ta carte d'identité dans ton colis avec le bon de cession reçu en
-                    pièce jointe signé. Dans le cas contraire,
-                    la reprise du téléphone ne sera pas effectuée et le retour sera à ta charge.
+                    Si tu choisis l’envoi par Chronopost, nous avons besoin d'avoir la photocopie recto verso de ta
+                    carte d'identité et le bon de cession (qu’on t’envoie par mail) signé dans le colis.
+                    Sans ces éléments, BipBip ne pourra pas racheter ton tél et le retour du colis sera à ta charge.
                 </h5>
             </div>
             <div class="col-1 text-danger text-center">
