--- a/templates/collects/whos_who.html.twig
+++ b/templates/collects/whos_who.html.twig
@@ -17,7 +17,7 @@
               <div class="giver mb-5 ">
                   <a href="{{ path("vends") }}" target="_blank" title="vends"><img class="img-top" src="{{ asset('images/GiverAv.png') }}" alt="Givers_front"></a>
               </div>
-              <div class="collecteur mb-5">
+              <div class="collecteurs mb-5">
                   <a href="{{ path("asso") }}" target="_blank" title="bipers"><img class="img-top" src="{{ asset('images/CollecteursAv.png') }}" alt="Collecteurs"></a>
               </div>
               <div class="partenaire mb-5">
