modification emplacement de la signature bipbip vers dossier signature

--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -171,7 +171,7 @@
     <table style="height:160px;">
         <tr>
             <td style="width:50%; border:2px solid black; text-align:center;">
-                <img src="/uploads/signatures/ImageCachetEnviroServicesFrance.png" alt="BipBip Mobile">
+                <img src="/uploads/signatures/ImageCachetEnviroServicesFrance.jpg" alt="BipBip Mobile">
             </td>
             <td style="width:50%; border:2px solid black;">
                 {% if app.user.roles == "ROLE_ADMIN" or app.user.roles == "ROLE_COLLECTOR" %}
