Fix estimation price on profil user

--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -52,7 +52,7 @@
                 {{ estimation.brand }} {{ estimation.model }}, {{ estimation.capacity }} Go
                 </div>
                 <div class="col-2 text-center p-3">
-                    {{ estimation.maxPrice}} €
+                    {{ estimation.estimatedPrice}} €
                 </div>
                 {% if estimation.status == 1 %}
                     <div class="col-3 p-3">
