Fix taille du canva pour signature

--- a/templates/bdc/signature.html.twig
+++ b/templates/bdc/signature.html.twig
@@ -13,8 +13,8 @@
         </div>
         <h1 class="primary-title">Etape 5 bis : signature du client</h1>
         <div class="row justify-content-center m-3">
-            <div class="col-6 text-center p-4 border border-success">
-                <canvas id="canvas"></canvas>
+            <div class="col-6 text-center">
+                <canvas id="canvas" class="border border-success"></canvas>
             </div>
             <div class="col-12 text-center" id="img" style="display:none;">
                 Signature ajoutée, vous pouvez générer le bon de cession.
